--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -78,3 +78,30 @@
     margin: 40px auto;
   }
 }
+
+.hero-link {
+  position: relative;
+}
+
+.hero-link:hover {
+  color: #fff;
+  /* text-decoration: underline; */
+}
+
+.hero-link:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 2px;
+  left: 50%;
+  position: absolute;
+  background: #fff;
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+
+.hero-link:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
