--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -27,6 +27,19 @@
   margin: 0 0 25px;
 }
 
+.herotitle {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 3em;
+  background: linear-gradient(90deg, #3F2B96 0%, #A8C0FF 100%);
+  /* background-image: linear-gradient( 68.3deg,  rgba(245,177,97,1) 0.4%, rgba(236,54,110,1) 100.2% ); */
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-box-decoration-break: clone;
+}
+
 .info {
   font-size: 20px;
   line-height: 1.4;
@@ -81,11 +94,7 @@
 
 .hero-link {
   position: relative;
-}
-
-.hero-link:hover {
   color: #fff;
-  /* text-decoration: underline; */
 }
 
 .hero-link:after {
@@ -102,6 +111,11 @@
 }
 
 .hero-link:hover:after { 
+  width: 100%; 
+  left: 0; 
+}
+
+.hero-link:focus:after { 
   width: 100%; 
   left: 0; 
 }
