--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -31,13 +31,26 @@
   margin: 0;
   line-height: 1.15;
   font-size: 3em;
-  background: linear-gradient(90deg, #3F2B96 0%, #A8C0FF 100%);
+  background: #7F00FF;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #E100FF, #7F00FF);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #E100FF, #7F00FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  /* background: linear-gradient(90deg, #3F2B96 0%, #A8C0FF 100%); */
   /* background-image: linear-gradient( 68.3deg,  rgba(245,177,97,1) 0.4%, rgba(236,54,110,1) 100.2% ); */
   background-clip: border-box;
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-box-decoration-break: clone;
+}
+
+.secondarygradient {
+  /* background-image: linear-gradient( 68.3deg,  rgba(245,177,97,1) 0.4%, rgba(236,54,110,1) 100.2% ); */
+  background: -webkit-linear-gradient(-70deg, #a2facf 0%, #64acff 100%);
+  background-clip: border-box;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .info {
