--- a/components/speaker-section.module.css
+++ b/components/speaker-section.module.css
@@ -141,3 +141,37 @@
 .techStackIcons img {
   margin-right: 12px;
 }
+
+.button {
+  border-radius: var(--space-2x);
+  border: 1px solid #fff;
+  color: #000;
+  background: #fff;
+  cursor: pointer;
+  font-family: inherit;
+  font-size: var(--text-md);
+  letter-spacing: -0.02em;
+  font-weight: 500;
+  outline: none;
+  transition: background-color 0.2s ease;
+  padding: 0 var(--space-4x);
+  height: 55px;
+  width: 100%;
+  max-width: 100%;
+  margin-right: var(--space-4x);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button:hover,
+.button:focus {
+  background: black;
+  color: #fff;
+}
+
+.button > svg {
+  margin-left: var(--space-2x);
+  min-height: var(--space-4x);
+  min-width: var(--space-4x);
+}
