--- a/components/hero.module.css
+++ b/components/hero.module.css
@@ -61,6 +61,7 @@
   justify-content: center;
   align-items: center;
   margin-bottom: var(--space-8x);
+  margin-top: var(--space-8x);
   color: var(--brand);
 }
 
