--- a/components/logo.module.css
+++ b/components/logo.module.css
@@ -15,7 +15,7 @@
  */
 
 .logo {
-  display: flex;
+  /* display: flex; */
   align-items: center;
 }
 
@@ -27,7 +27,7 @@
 
 .text {
   line-height: 1.15;
-  font-size: 1.25em;
+  font-size: 0.9em;
   text-transform: uppercase;
   font-weight: bold;
 }
